뱅기 움직임, 스텔스효과, 카메라모드 3개.

--- a/CG_OPENGL_term.vcxproj.filters
+++ b/CG_OPENGL_term.vcxproj.filters
@@ -18,9 +18,12 @@
     <ClInclude Include="stb_image.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="debug.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="template.cpp">
+    <ClCompile Include="PROJECT.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
