--- a/CG_OPENGL_term.vcxproj.filters
+++ b/CG_OPENGL_term.vcxproj.filters
@@ -21,6 +21,12 @@
     <ClInclude Include="debug.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="light.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Header.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PROJECT.cpp">
