--- a/CG_OPENGL_term.vcxproj.filters
+++ b/CG_OPENGL_term.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="screen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Alpha_blending.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Obj.cpp">
@@ -72,6 +75,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="screen.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Alpha_blending.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
