충돌 ver 1. 느림!. 거리비례로 다시 시도해 볼 예정.

--- a/CG_OPENGL_term/CG_OPENGL_term.vcxproj
+++ b/CG_OPENGL_term/CG_OPENGL_term.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClInclude Include="Alpha_blending.h" />
     <ClInclude Include="camera.h" />
+    <ClInclude Include="debug.h" />
     <ClInclude Include="Handle_evnts.h" />
     <ClInclude Include="Header.h" />
     <ClInclude Include="light.h" />
