--- a/CG_OPENGL_term/CG_OPENGL_term.vcxproj.filters
+++ b/CG_OPENGL_term/CG_OPENGL_term.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="Alpha_blending.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="debug.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Obj.cpp">
